feat: create get start js file

--- a/assets/style/getstart.css
+++ b/assets/style/getstart.css
@@ -25,6 +25,10 @@
         justify-content: center;
     }
 
+    #slider div:first-child {
+        background-color: black;
+    }
+
     #slider div{
         width: 20px;
         height: 3px;
