--- a/assets/style/login.css
+++ b/assets/style/login.css
@@ -31,24 +31,27 @@
   input {
     border: 0;
     background-color: rgb(239, 230, 230);
-    padding: 8px;
+    /* width: 300px; */
+    padding: 5px 0 5px 30px;
+    border-radius: 5px;
+  }
+
+  #email input, #pass input {
+    width: 300px;
   }
 
   i {
     padding: 0 5px;
+    position: absolute;
   }
 
-  #email,
-  #pass {
-    border-radius: 5px;
-    background-color: rgb(239, 230, 230);
-    width: 300px;
-  }
-
-  #pass {
+  #email, #pass {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+  }
+
+  #pass i:last-child{
+    right: 30px;
   }
 
   #remember {
