--- a/assets/style/product.css
+++ b/assets/style/product.css
@@ -11,7 +11,7 @@
     background-color: rgb(237, 236, 236);
   }
 
-  #top div:first-child {
+  #top i {
     margin-top: 20px;
     margin-left: 20px;
   }
@@ -124,5 +124,27 @@
     border: 0;
     padding: 15px 40px;
     border-radius: 30px;
+  }
+
+  #slider {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    gap: 5px;
+    align-items: center;
+  }
+
+  #slider div {
+    width: 10px;
+    height: 10px;
+    background-color: rgb(146, 139, 139);
+    border-radius: 50%;
+  }
+
+  .sliderDiv {
+    width : 20px !important;
+    height: 8px !important;
+    border-radius: 40% !important;
+    background-color: black !important;
   }
 }
