--- a/assets/style/product.css
+++ b/assets/style/product.css
@@ -54,8 +54,9 @@
   }
 
   #description p {
-    font-size: 14px;
+    font-size: 13px;
     color: gray;
+    line-height: 15px;
   }
 
   #size, #color {
