--- a/assets/style/checkout.css
+++ b/assets/style/checkout.css
@@ -236,4 +236,10 @@
     border: 0;
     border-radius: 40px;
   }
+
+  #ShoeColorSize div {
+    width: 15px !important;
+    height: 15px !important;
+    border-radius: 50% !important;
+  }
 }
